# android-reverse-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  PIPELINE.md  PLAYBOOK_ANDROID_PROTOCOL.md  PLAYBOOK_FIELD_LOCATION.md  PLAYBOOK_NATIVE_JNI.md  PLAYBOOK_VMP.md  SAFETY_SCOPE.md
src/ara/: cli.py  evidence.py  models.py  pipeline.py  report.py
src/ara/playbooks/: android_reverse.yaml
src/ara/tools/: apktool.py  frida.py  ida_mcp.py  jadx.py  mitm.py  unidbg.py
templates/frida/: crypto_trace.js  java_net_trace.js  jni_trace.js  okhttp_trace.js
templates/mitmproxy/: protocol_logger.py
tests/: test_models.py
