[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "android-reverse-agent"
version = "0.1.0"
description = "Evidence-driven Android reverse engineering workflow for CTF and authorized APK analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.2.0",
    "llama-index>=0.11.0",
]
tools = [
    "frida-tools>=12.0.0",
]

[project.scripts]
ara = "ara.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
